# slack_bot

./: .gitignore  Dockerfile  README.md  access_s3_bucket.py  config.py  docker-compose.yml  extract_bucket_comp.py  pyproject.toml  python_methods.py  requirements.txt  slack_bot.py  slack_integ.py
code/: entrypoint.sh  ngrok_install.sh  pyproject.toml  slack_bot.py
code/slack_bot/: credentials.py  s3_operations.py
code/tests/: __init__.py
python_library/: __init__.py  credentials.py
slack_bot/: __init__.py  credentials.py  s3_operations.py
tests/: test_s3_operations.py
