[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-methods"
version = "0.1.0"
description = "A library for reusable Python methods to be used AWS S3 bucket."
readme = "README.md"
authors = [
    { name = "Shlomi Harari", email = "shlomiharari81@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["methods", "library", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3==1.36.4",
    "botocore==1.36.4",             
    "python-decouple==3.8"   
]
requires-python = ">=3.8"
